# smlp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .style.yapf  AUTHORS  README.md  Set10_experiments.json  Set11_experiments.json  Set12_experiments.json  Set13_experiments.json  Set14_experiments.json  Set15_experiments.json  Set16_experiments.json  Set17_experiments.json  Set18_experiments.json  Set19_experiments.json  Set1_experiments.json  Set20_experiments.json  Set21_experiments.json  Set22_experiments.json  Set23_experiments.json  Set24_experiments.json  Set25_experiments.json  Set2_experiments.json  Set3_experiments.json  Set4_experiments.json  Set5_experiments.json  Set6_experiments.json  Set8_experiments.json  Set9_experiments.json  VNC.md  build_macos.sh  flake.nix  pyproject.toml  repair_path.sh  repair_wheel.py  setup.py
.github/scripts/: artifacts.sh
.github/workflows/: build-wheel.sh  build-wheels.yml  install-deps.sh  install-gmp.sh  install-z3.sh  run-hello.yml
docker/python3.11/: Dockerfile  README.md  enter_container  enter_container_x11_forwarding  enter_released_container  enter_released_container_wslg  enter_released_container_x11_forwarding  requirements.txt  run_docker_build_incremental  run_installation_test  run_mathsat_build  run_meson_build  run_python_boost_build  run_tkdiff_patch  start_vnc
docker/python3.13/: Dockerfile  README.md  enter_container  enter_container_mac  enter_container_x11_forwarding  enter_released_container  enter_released_container_mac  enter_released_container_mac_vnc  enter_released_container_mac_x11_forwarding  enter_released_container_wslg  enter_released_container_x11_forwarding  requirements.txt  run_docker_build_incremental  run_docker_build_incremental_mac  run_docker_build_mac  run_installation_test  run_mathsat_build  run_meson_build  run_python_boost_build  start_vnc
experiment_outputs/Set1/: smlp_toy_basic.csv
experiment_outputs/Set10/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set11/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set12/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set13/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set14/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set15/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set16/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set17/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set18/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set19/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set2/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set20/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set21/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set22/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set23/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set24/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set25/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set3/: function.txt  smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set4/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set5/: smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set6/: smlp_toy_basic.csv  smlp_toy_basic.spec
manylinux_2_28/: setup.py
misc/: README.old
pytest/: README_pytest.md  test_e2e_manual.py  test_rl_agent.py  test_rl_server.py
quickstart/: constraint_dora.json  constraint_dora_dataset.py  constraint_dora_poly_optimization_results_expected.txt  quickstart.sh
regr_smlp/: .gitignore
scripts/: hello.py
smlp_regression/: run_smlp_regression  run_smlp_regression_311_venv  run_smlp_regression_312  run_smlp_regression_312_venv  run_smlp_regression_313_venv
src/: .gitignore  INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  SMLP_RL_README.md  Untitled.ipynb  api_smlp_agent_rl.py  app.py  demo_rl_workflow.py  readme_app.md  run_smlp.py  smlp_agent.py  smlp_agent_api.py  smlp_agent_rl.py  smlp_agent_rl_finetune.py  smlp_agent_rl_integration.py  smlp_agent_rl_server.py  smlp_agent_rl_session.py  smlp_agent_utils.py  smlp_agent_web_ui.html  smlp_chatbot.py  smlp_few_shot_examples.json  smlp_mcp_client.py  smlp_mcp_server.py  smlp_task_graph.py  smlp_train.py  test_app.py  test_visual.py  visualize_h5.py
test_build/: Dockerfile  run_docker_build  run_docker_build_incremental
tutorial/: AUTHORS  README.md  STUDY.md  inference_benchmark  inference_benchmark_expected.txt  run_all  run_smlp_tutorial_clone_and_examples  run_smlp_tutorial_clone_and_examples_314
(+949 files in other folders)
