[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "smlp"
version = "0.1.0"
description = "SMLP - System for Machine Learning-based Parameter analysis"
requires-python = "==3.11.*"
dependencies = [
    "category_encoders==2.7.0",
    "doepy",
    "jenkspy",
    "keras_tuner",
    "joblib==1.3.2",
    "matplotlib",
    "meson",
    "mrmr-selection",
    "pandas",
    "pycaret",
    "pyDOE",
    "pysubgroup==0.8.0",
    "scikit-learn==1.4.2",
    "scipy",
    "seaborn",
    "z3-solver==4.8.12",
    "tensorflow==2.15.1",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["src*", "smlp_py*", "regr_smlp*", "utils*"]

[tool.pytest.ini_options]
markers = [
    "toy: Toy example tests (deselect with '-m \"not toy\"')",
    "real: Tests on real world data (deselect with '-m \"not real\"')",
    "test: ?? TODO: description (deselect with '-m \"not test\"')",
]

# ---------------------------------------------------------------------------
# Build-time environment variables (all optional)
# ---------------------------------------------------------------------------
# BOOST_ROOT       Reuse an existing Boost prefix, skips download + compile.
#                  e.g.  export BOOST_ROOT=~/.local/boost_py313
# BOOST_CACHE_DIR  Where to cache compiled Boost (default: ~/.local/boost_py313).
# BOOST_VERSION    Boost version to download (default: 1.83.0).
# KAY_DIR          Path to an existing kay checkout.
# SMLP_BRANCH      Git branch to use in the smlp repo (auto-detected if unset).
