[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "meson",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "smlp"
version = "1.0.1"
description = "SMLP - The Symbolic Machine Learning Prover"
requires-python = "==3.11.*"
dependencies = [
    "blosc2",
    "category_encoders==2.7.0",
    "doepy",
    "jenkspy",
    "keras-tuner",
    "kt_legacy",
    "joblib==1.3.2",
    "matplotlib",
    "meson",
    "mrmr-selection",
    "pandas",
    "pycaret",
    "pyDOE",
    "pysubgroup==0.8.0",
    "scikit-learn==1.4.2",
    "scipy",
    "seaborn",
    "z3-solver==4.8.12",
    "tensorflow==2.15.1",
]

[project.scripts]
smlp = "smlp.run_smlp:main2"

# ---------------------------------------------------------------------------
# Build-time environment variables (all optional)
# ---------------------------------------------------------------------------
# BOOST_ROOT       Reuse an existing Boost prefix, skips download + compile.
#                  e.g.  export BOOST_ROOT=~/.local/boost_py313
# BOOST_CACHE_DIR  Where to cache compiled Boost (default: ~/.local/boost_py313).
# BOOST_VERSION    Boost version to download (default: 1.83.0).
# KAY_DIR          Path to an existing kay checkout.
# SMLP_BRANCH      Git branch to use in the smlp repo (auto-detected if unset).
