[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "meson",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
maintainers = [
  {name = "Zurab Khasidashvili", email = "zurab.khasidashvili@gmail.com"},
  {name = "Konstantin Korovin", email = "kostyakor@gmail.com"},
  {name = "Franz Brauße", email = "fbrausse@paxle.org"},
  {name = "Dmitry Messerman", email = "dmitry.messerman@gmail.com"}
]
name = "smlptech"
version = "1.1.1"
description = "SMLP - The Symbolic Machine Learning Prover"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "doepy",
    "jenkspy",
    "keras-tuner",
    "matplotlib",
    "mrmr-selection",
    "pandas",
    "pycaret",
    "pyDOE",
    "pysubgroup==0.8.0",
    "scikit-learn==1.4.2",
    "scipy",
    "seaborn",
    "tensorflow==2.15.1",
]

[project.scripts]
smlp = "smlp.run_smlp:main2"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["*"]

# ---------------------------------------------------------------------------
# Build-time environment variables (all optional)
# ---------------------------------------------------------------------------
# BOOST_ROOT       Reuse an existing Boost prefix, skips download + compile.
#                  e.g.  export BOOST_ROOT=~/.local/boost_py313
# BOOST_CACHE_DIR  Where to cache compiled Boost (default: ~/.local/boost_py313).
# BOOST_VERSION    Boost version to download (default: 1.83.0).
# GMP_ROOT         Path to prefix of an existing GMP installation.
# KAY_DIR          Path to an existing kay checkout.
# Z3_PREFIX        Path to existing installation of Z3.
